set(ARCH_SHELLCODE_C_FLAGS -mno-gpopt -G0 -march=mips32r2)
set(ARCH_SHELLCODE_LD_FLAGS ${ARCH_SHELLCODE_C_FLAGS})
set(ARCH_SHELLCODE_LINK_LIBRARIES)

file(GLOB_RECURSE ARCH_SOURCES "${CMAKE_CURRENT_LIST_DIR}/*.[cS]")

set(allowed_endian BIG LITTLE)
if(NOT DEFINED ENDIAN OR NOT ENDIAN IN_LIST allowed_endian)
    message(FATAL_ERROR "ENDIAN must be one of ${allowed_endian}")
endif()
set(COMPILER_ENDIAN_FLAG $<$<STREQUAL:${ENDIAN},BIG>:-EB> $<$<STREQUAL:${ENDIAN},LITTLE>:-EL>)
set(LINKER_ENDIAN_FLAG $<$<STREQUAL:${ENDIAN},BIG>:-EB> $<$<STREQUAL:${ENDIAN},LITTLE>:-EL>)

set(CMAKE_SYSTEM_NAME Linux)
set(CMAKE_SYSTEM_PROCESSOR mips)

set(CMAKE_C_COMPILER ${TOOLCHAIN_PREFIX}gcc)
set(CMAKE_ASM_COMPILER ${TOOLCHAIN_PREFIX}gcc)

target_compile_options(${PROJECT_NAME} PUBLIC ${ARCH_SHELLCODE_C_FLAGS} ${COMPILER_ENDIAN_FLAG})
target_compile_definitions(${PROJECT_NAME} PUBLIC MIPS_${ENDIAN}_ENDIAN)

target_link_options(${PROJECT_NAME} PUBLIC ${ARCH_SHELLCODE_LD_FLAGS} ${LINKER_ENDIAN_FLAG})
target_link_libraries(${PROJECT_NAME} PUBLIC ${ARCH_SHELLCODE_LINK_LIBRARIES})
target_sources(${PROJECT_NAME} PUBLIC ${ARCH_SOURCES})

